--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <meta name="author" content="" />
         <title>Bolo da Bet</title>
         <!-- Favicon-->
-        <link rel="icon" type="image/x-icon" href="assets/favicon.ico" />
+        <link rel="icon" type="image/x-icon" href="https://raw.githubusercontent.com/Morphelse/bet-landingpage/main/assets/pedaco-de-bolo.ico?token=GHSAT0AAAAAAB4FS54ZJT3IJDSS5HHUQAUQZAGF7AA" />
         <!-- Font Awesome icons (free version)-->
         <script src="https://use.fontawesome.com/releases/v6.1.0/js/all.js" crossorigin="anonymous"></script>
         <!-- Google fonts-->
@@ -57,7 +57,7 @@
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
-                        <img src="../bet-landingpage/assets/img/bolo-navbar.png" class="service-bolo" alt="service-bolo">
+                        <img src="../assets/img/bolo-navbar.png" class="service-bolo" alt="service-bolo">
                         <h4 class="my-3">Bolos Deliciosos</h4>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
