--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                 </div>
                 <div class="row text-center">
                     <div class="col-md-4">
-                        <img src="../bet-landingpage/assets/img/bolo-navbar.png" class="service-bolo" alt="service-bolo">
+                        <img src="./assets/img/bolo-navbar.png" class="service-bolo" alt="service-bolo">
                         <h4 class="my-3">Bolos Deliciosos</h4>
                         <p class="text-muted">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Minima maxime quam architecto quo inventore harum ex magni, dicta impedit.</p>
                     </div>
