--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
         <footer class="footer py-4">
             <div class="container">
                 <div class="row align-items-center">
-                    <div class="col-lg-4 text-lg-start">Copyright &copy; bolodabet.com</div>
+                    <div class="col-lg-4 text-lg-start">Copyright &copy; betbolos.com</div>
                     <div class="col-lg-4 my-3 my-lg-0">
                         
                         <a class="btn btn-social mx-2" href="https://facebook.com" aria-label="Facebook"><img src="./assets/img/logos/facebook.png" class="footer-logo" alt="facebook logo"></a>
